# gearmand

./: .bootstrap  .bzrignore  .gitignore  .quickly  .travis.yml  AUTHORS  COPYING  ChangeLog  GNUmakefile  HACKING  Makefile.am  PROTOCOL  README  README.FIRST  README.md  bootstrap.sh  configure.ac  rpm.am  version.m4
.bonnyci/: run.sh
benchmark/: Makefile.am  benchmark.c  benchmark.cc  benchmark.h  blobslap_client.c  blobslap_client.cc  blobslap_worker.c  blobslap_worker.cc  include.am
bonnyci/: run.sh
config/: autorun.sh  bootstrap  pre_hook.sh
docs/: Doxyfile.api  Doxyfile.dev  Makefile  api_header.html  changes.rst  conf.py  conf.py.in  dev_header.html  do.rst  doxygen.h  error_descriptions.rst  examples.mk  gearadmin.rst  gearman.rst  gearman_actions_t.rst  gearman_bugreport.rst  gearman_client.rst  gearman_client_execute.rst  gearman_client_execute_reduce.rst  gearman_client_st.rst  gearman_execute.rst  gearman_function_st.rst  gearman_job_st.rst  gearmand.rst  (+19 more)
examples/: Makefile.am  echo_client.c  echo_client.cc  echo_worker.c  echo_worker.cc  include.am  reverse_client.c  reverse_client.cc  reverse_client_bg.c  reverse_client_bg.cc  reverse_client_cb.c  reverse_client_cb.cc  reverse_client_epoch.cc  reverse_worker.c  reverse_worker.cc  reverse_worker_bg.c  wc_worker.c  wc_worker.cc
gearmand/: Makefile.am  connection.c  connection.h  error.hpp  gearmand.c  gearmand.cc  include.am  log.hpp  server_common.h
libgearman/: Makefile.am  actions.cc  actions.h  actions.hpp  add.cc  add.h  add.hpp  aggregator.cc  allocator.cc  allocator.h  allocator.hpp  argument.cc  argument.h  assert.hpp  backtrace.cc  behavior.c  behavior.h  byte_array.c  byte_array.h  byteorder.c  byteorder.cc  byteorder.h  check.cc  check.h  client.c  client.cc  client.h  client.hpp  command.cc  command.gperf  command.h  common.h  con.c  con.h  conf.c  conf.h  conf_module.c  conf_module.h  configure.h.in  conn.c  (+161 more)
libgearman-server/: Makefile.am  byte.h  byteorder.cc  byteorder.h  client.c  client.cc  client.h  common.h  conf.c  conf.cc  conf.h  conf_module.c  conf_module.cc  conf_module.h  config.cc  config.h  config.hpp  conn.c  conn.h  connection.c  connection.cc  connection.h  connection_list.cc  connection_list.h  connection_plus.cc  constants.h  error.h  fifo.c  fifo.cc  fifo.h  function.c  function.cc  function.h  gearmand.c  gearmand.cc  gearmand.h  gearmand_con.c  gearmand_con.cc  gearmand_con.h  gearmand_con_plus.cc  (+59 more)
libgearman-server/error/: include.am  strerror.cc  strerror.h  type.h
libgearman-server/plugins/: base.cc  base.h  include.am  protocol.h  queue.h
libgearman-server/plugins/protocol/: include.am
libgearman-server/plugins/protocol/gear/: protocol.cc  protocol.h
libgearman-server/plugins/protocol/http/: include.am  method.cc  protocol.c  protocol.cc  protocol.h  response_codes.cc
libgearman-server/plugins/queue/: base.cc  base.h  include.am
libgearman-server/plugins/queue/default/: queue.cc
libgearman-server/plugins/queue/drizzle/: include.am  queue.c  queue.cc  queue.h
libgearman-server/plugins/queue/libmemcached/: include.am  queue.c  queue.cc  queue.h
libgearman-server/plugins/queue/mysql/: include.am  queue.cc
libgearman-server/plugins/queue/postgres/: include.am  queue.c  queue.cc  queue.h
libgearman-server/plugins/queue/redis/: include.am  queue.cc  queue.h
libgearman-server/plugins/queue/retention/: include.am  queue.cc  queue.h
libgearman-server/plugins/queue/sqlite/: include.am  instance.cc  instance.hpp  queue.c  queue.cc  queue.h
libgearman-server/plugins/queue/tokyocabinet/: include.am  queue.c  queue.cc  queue.h
libgearman-server/struct/: client.h  connection_list.h  function.h  gearmand.h  gearmand_con.h  gearmand_thread.h  io.h  job.h  packet.h  port.h  server.h  thread.h  worker.h
libgearman/function/: base.hpp  basic.hpp  function_v1.hpp  function_v2.cc  function_v2.hpp  make.cc  make.hpp  mapper.cc  mapper.hpp  null.hpp  partition.cc  partition.hpp
libgearman/interface/: client.hpp  error.hpp  packet.hpp  push.hpp  task.hpp  universal.hpp  worker.hpp
libgearman/protocol/: echo.cc  submit.cc  submit.h
libmodconf/: Makefile.am  common.h  modconf.c  modconf.h  module.c  module.h  structs.h
man/: Makefile.am  include.am
server/: Makefile.am  connection.c  connection.h  main.c  server_common.h
support/: Makefile.am  gearman.info.conf  gearmand.init.in  gearmand.pc.in  gearmand.spec.in  gearmand.sysconfig  include.am
tests/: Makefile.am  basic.cc  basic.h  batch.cc  batch.h  blobslap_client.cc  burnin.c  burnin.cc  c_test.c  cli.cc  client.h  client_test.c  client_test.cc  client_test.rec  context.h  cpp_test.cc  cycle  cycle.cc  do.cc  do.h  do_background.cc  drizzle_test.c  drizzle_test.cc  ephemeral.am  ephemeral_test.cc  execute.cc  execute.h  function.c  gearadmin.cc  gearman.cc  gearman_client_do_job_handle.cc  gearman_client_execute_reduce.cc  gearman_client_execute_reduce.h  gearman_execute_map_reduce.cc  gearman_execute_map_reduce.h  gearman_execute_partition.cc  gearman_execute_partition.h  gearman_worker_set_reducer.cc  gearmand.cc  hostile.am  (+65 more)
tests/libgearman-1.0/: client_test.cc  client_test.h  do.cc  do_background.cc  execute.cc  fork.cc  gearman_client_do_job_handle.cc  gearman_client_job_status_by_unique.cc  gearman_execute_partition.cc  include.am  internals.cc  limits.cc  multi_client_test.cc  protocol.cc  regression.cc  server_options.cc  task.cc  unique.cc  worker_test.cc  workers.cc  workers_v1.cc
tests/perl/worker/: echo.pl
tests/workers/: include.am
tests/workers/aggregator/: cat.cc  cat.h
tests/workers/v1/: echo_or_react.cc  echo_or_react.h  echo_or_react_chunk.cc  echo_or_react_chunk.h  echo_or_react_chunk_worker.cc  increment_reset.h  increment_reset_worker.cc  unique.cc  unique.h
tests/workers/v2/: call_exception.cc  call_exception.h  called.cc  check_order.cc  count.cc  count.h  echo_or_react.cc  echo_or_react.h  echo_or_react_chunk.cc  echo_or_react_chunk.h  increment_reset.cc  increment_reset.h  sleep_return_random.cc  sleep_return_random.h  split.cc  split.h  unique.cc  unique.h
(+606 files in other folders)
